tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__SilverShulkerBox-nc1Pqje3RIe_Yp6WoPOFzg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 4014752942135674318,
  "prerequisites": [
    13073740252492184943,
    17816324355477099964,
    1148
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The portable equivalent of the Silver Barrel.\n\nHas §n72§r slots.\n\n[note]Can be Dyed![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lSilver Shulker Box",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    13073740252492184943,
    17816324355477099964,
    1148
  ],
  "rewards": [],
  "tasks": []
}
