tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__SomeHandyUses-AAAAAAAAAAAAAAAAAAAHkg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1938,
  "prerequisites": [
    1936
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The TiCon chisel doesn't have a lot of uses, but here are a couple of interesting ones. Use NEI to see other options for more decorations. You can also slab these blocks if you want something monsters cannot spawn on.\n\nBrownstone roads are slightly faster than rough brownstone.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Some Handy Uses",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1936
  ],
  "rewards": [],
  "tasks": []
}
