tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__Tileworker-AAAAAAAAAAAAAAAAAAAHqw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1963,
  "prerequisites": [
    1960
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The tileworker can take the single-color ceramic blocks and turn them into pretty patterned blocks.\n\nAnd contrary to the name, you use ceramic blocks here, not tiles.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tileworker",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1960
  ],
  "rewards": [],
  "tasks": []
}
